--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "infer-owner": "^1.0.4",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.16",
     "validator": "^13.9.0",
